# tomato-clock-pyqt6

./: AGENTS.md  CLAUDE.md  README.md  TomatoClock.spec  debug-macos-packaging-crash.md  debug-system-notification-missing.md  debug-windows-notification-missing.md  icon.icns  pyproject.toml  resources.qrc
.dbg/: macos-packaging-crash.env  system-notification-missing.env  trae-debug-log-macos-packaging-crash.ndjson  trae-debug-log-system-notification-missing.ndjson  windows-notification-missing.env
.github/workflows/: release.yml  static.yml
home_page/: index.html
packaging/linux/: AppRun  TomatoClock.desktop  tomatoclock.appdata.xml
packaging/windows/: TomatoClock.iss
scripts/: build_linux_appimage.sh  build_macos_release.sh  build_windows_installer.ps1
src/: app_metadata.py  main.py
src/assets/: resources_rc.py
src/core/: pomodoro_engine.py  session_store.py  settings_mixins.py  settings_models.py  settings_store.py  update_checker.py
src/tray/: macos_status_item.py  macos_system_notification.py  popup_state.py  tray_controller.py
src/ui/: bottom_nav.py  duration_dialog.py  focus_page.py  focus_type_cards.py  focus_type_dialog.py  focus_widgets.py  main_window.py  settings_controls.py  settings_page.py  settings_prompt_panel.py  stats_calendar_views.py  stats_charts.py  stats_common.py  stats_contribution.py  stats_page.py  stats_views.py  template_dialog.py  template_page.py  toggle_switch.py  tray_popup.py  ui_chrome.py  ui_theme.py  update_notice.py
src/utils/: icon_loader.py  system_notification_fallback.py  windows_notification.py
