[project]
name = "tomato-clock-pyqt6"
version = "1.0.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyqt6>=6.11.0",
    "pyqt6-charts>=6.11.0",
]

[project.urls]
Repository = "https://github.com/SublimeCT/tomato-clock-pyqt6"

[dependency-groups]
dev = [
    "pillow>=12.2.0",
    "pyinstaller>=6.20.0",
]
