[project]
name = "tomato-clock-pyqt6"
version = "2.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyqt6>=6.11.0",
    "pyqt6-charts>=6.11.0",
    "pyobjc-core>=11.1; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa>=11.1; sys_platform == 'darwin'",
    "pyobjc-framework-UserNotifications>=11.1; sys_platform == 'darwin'",
]

[project.urls]
Repository = "https://github.com/SublimeCT/tomato-clock-pyqt6"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]  # 强行把 src 目录作为包内容打包

[dependency-groups]
dev = [
    "pillow>=12.2.0",
    "pyinstaller>=6.20.0",
]
